--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,7 @@
 .dark {
   --white: #000000;
   --black: #ffffff;
-  --desktop-sidebar: #0a2342;
+  --desktop-sidebar: #262626;
   --title: #ffffff;
   --text: #d1d5db;
   --primary-color: #3b82f6;
