--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
   --white: #ffffff;
   --black: #000000;
   --desktop-sidebar: #ffffff;
+  --featured: #f3f4f6;
   --title: #0a2342;
   --text: #1f2937;
   --primary-color: #3b82f6;
@@ -14,6 +15,7 @@
   --white: #000000;
   --black: #ffffff;
   --desktop-sidebar: #262626;
+  --featured: #262626;
   --title: #ffffff;
   --text: #d1d5db;
   --primary-color: #3b82f6;
