--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,8 +18,8 @@
   --featured: #262626;
   --title: #ffffff;
   --text: #d1d5db;
-  --primary-color: #3b82f6;
-  --hover-color: #2563eb;
+  --primary-color: #ce9c81;
+  --hover-color: #e49970;
   --primary-bgColor: #0a2342;
 }
 
