updated about page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,8 +7,8 @@
   --featured: #f3f4f6;
   --title: #0a2342;
   --text: #1f2937;
-  --primary-color: #3b82f6;
-  --hover-color: #2563eb;
+  --primary-color: #ce9c81;
+  --hover-color: #e49970;
   --primary-bgColor: #0a2342;
 }
 .dark {
