--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
   --featured: #f3f4f6;
   --title: #0a2342;
   --text: #1f2937;
+  --pagination-button: #e0e2e5;
   --primary-color: #ce9c81;
   --hover-color: #e49970;
   --primary-bgColor: #0a2342;
@@ -18,6 +19,7 @@
   --featured: #262626;
   --title: #ffffff;
   --text: #d1d5db;
+  --pagination-button: #1b2634;
   --primary-color: #ce9c81;
   --hover-color: #e49970;
   --primary-bgColor: #0a2342;
