Add changes in blog font size

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -139,13 +139,14 @@
 .blog-content p {
   margin-top: 1rem;
   margin-bottom: 1rem;
-  font-size: 1rem;
+  font-size: 18px;
 }
 
 .blog-content ul,
 .blog-content ol {
   padding-left: 1.5rem;
   margin: 1rem 0;
+  font-size: 16px;
 }
 
 .blog-content li {
